按照javadoc规范优化

--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -20,10 +20,9 @@ import io.swagger.annotations.ApiModelProperty;
 
 
 /**
- * ${comments}
+ * ${comments} 数据库表实体对象
  *
  * @author ${author}
- * @email ${email}
  * @date ${datetime}
  * @version ${version}
  */
