--- a/src/main/resources/template/Controller.java.vm
+++ b/src/main/resources/template/Controller.java.vm
@@ -21,10 +21,9 @@ import ${package}.${moduleName}.service.${className}Service;
 import ${resultClassFullName};
 
 /**
- * ${comments}
+ * ${comments} 对应的前端控制器
  *
  * @author ${author}
- * @email ${email}
  * @date ${datetime}
  */
 #if(${hasSwagger})
