修改一下前端的模板（虽然没用过）

--- a/src/main/resources/template/index.vue.vm
+++ b/src/main/resources/template/index.vue.vm
@@ -87,14 +87,14 @@
           #[[url: this.$http.adornUrl]]#('/${moduleName}/${pathName}/list'),
           method: 'get',
           #[[params: this.$http.adornParams({]]#
-            'page': this.pageIndex,
-            'limit': this.pageSize,
-            'key': this.dataForm.key
+            'current': this.pageIndex,
+            'size': this.pageSize
+                //, 'key': this.dataForm.key
           })
         }).then(({data}) => {
           if (data && data.code === 0) {
-            this.dataList = data.page.list
-            this.totalPage = data.page.totalCount
+            this.dataList = data.data.records
+            this.totalPage = data.data.pages
           } else {
             this.dataList = []
             this.totalPage = 0
